# godot-rust-mac-arm

./: .gitignore  README.md  main_scene.tscn  project.godot
.cargo/: config.toml
godot/: icon.svg.import  main_scene.tscn  project.godot  rust.gdextension
rust/: Cargo.toml
rust/src/: lib.rs  player.rs
