[package]
name = "rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", default-features = false, features = ["experimental-wasm"] }
rand = "0.8"